src/snapshots/alma__parser__tests__test_module_parser__parenthesized_pattern.snap
---
source: src/parser.rs
assertion_line: 3753
expression: "parse(\"\\\nmodule Test\n\n(hello) = world\n\n(_) = world\n\")"
---
Input:

module Test

(hello) = world

(_) = world


Result:

module Test
    exports:

    imports:
        Alma 0:6
            Float 0:6 0:6
            String 0:6 0:6
            Bool 0:6 (True 0:6, False 0:6) 0:6
    type_definitions:

    definitions:
        Untyped
            pattern:
                Identifier hello 14:19 14:19
            expr:
                Identifier world 23:28 23:28
        Untyped
            pattern:
                _ 31:32
            expr:
                Identifier world 36:41 36:41



