src/snapshots/alma__parser__tests__test_module_parser__parsing errors.snap
---
source: src/parser.rs
assertion_line: 2509
expression: "parse(\"\\\nmodule Parent\n\nmodule Parent.Test\n\n  a = 1 + 2) + 3\n\n  b = * add\n    5\n\na = 1 + 2) + 3\n\nb = * add\n  5\")"
---
Input:

module Parent

module Parent.Test

  a = 1 + 2) + 3

  b = * add
    5

a = 1 + 2) + 3

b = * add
  5

Result:

:5:11

Expected a definition like `n = 5` or `add x y = x + y` or a type definition like `type User = LoggedIn | Anon`, but instead found: `)`

  3│  module Parent.Test
  4│  
  5│    a = 1 + 2) + 3
   │             ↑
  6│  
  7│    b = * add

Error {
    kind: InvalidModuleDefinition,
    token: Token {
        kind: RightParen,
        indent: 2,
        start: 46,
        end: 47,
        line: 5,
        column: 11,
    },
}
