src/snapshots/alma__parser__tests__test_module_parser__parsing_errors-2.snap
---
source: src/parser.rs
assertion_line: 2307
expression: "parse(\"\\\nmodule Test\n\na = 1 + 2 + 3\n\nb = * add\n  5\")"

---
Input:

module Test

a = 1 + 2 + 3

b = * add
  5

Result:

5:4: Expected an expression for the right side of the definition, but instead found: `*`

  3│  a = 1 + 2 + 3
  4│  
  5│  b = * add
   │      ↑
  6│    5

Error {
    message: "5:4: Expected an expression for the right side of the definition, but instead found: `*`\n\n  3│  a = 1 + 2 + 3\n  4│  \n  5│  b = * add\n   │      ↑\n  6│    5",
    token: Token {
        kind: Star,
        position: 32,
        end_position: 33,
        lexeme: "*",
        line: 5,
        column: 4,
        indent: 0,
    },
}
