src/snapshots/alma__parser__tests__test_module_parser__parsing_errors.snap
---
source: src/parser.rs
assertion_line: 2520
expression: "parse(\"\\\nmodule Test\n\na = 1 + 2) + 3\n\nb = * add\n  5\")"

---
Input:

module Test

a = 1 + 2) + 3

b = * add
  5

Result:

:3:9

Expected a definition like `n = 5` or `add x y = x + y` or a type definition like `type User = LoggedIn | Anon`, but instead found: `)`

  1│  module Test
  2│  
  3│  a = 1 + 2) + 3
   │           ↑
  4│  
  5│  b = * add

Error {
    kind: InvalidModuleDefinition,
    token: Token {
        kind: RightParen,
        position: 22,
        end_position: 23,
        lexeme: ")",
        line: 3,
        column: 9,
        indent: 0,
    },
}
