src/snapshots/alma__parser__tests__test_module_parser__pattern_matching.snap
---
source: src/parser.rs
assertion_line: 3901
expression: "parse(\"\\\nmodule Test\n\ntest = when 5 is\n    1 -> True\n    _ -> False\n\")"
---
Input:

module Test

test = when 5 is
    1 -> True
    _ -> False


Result:

module Test
    exports:

    imports:
        Alma 0:6
            Float 0:6 0:6
            String 0:6 0:6
            Bool 0:6 (True 0:6, False 0:6) 0:6
    type_definitions:

    definitions:
        Untyped
            pattern:
                Identifier test 13:17 13:17
            expr:
                PatternMatching 20:58
                    conditions:
                        Float 5 25:26
                    PatternMatchingBranch 34:43
                        patterns:
                            Float 1 34:35
                        body:
                            Identifier True 39:43 39:43
                    PatternMatchingBranch 48:58
                        patterns:
                            _ 48:49
                        body:
                            Identifier False 53:58 53:58



