src/snapshots/alma__parser__tests__test_module_parser__pattern_matching_errors-2.snap
---
source: src/parser.rs
assertion_line: 3764
expression: "parse(\"\\\nmodule Test\n\ntest = when 5 match\n    1 -> True\n    _ -> False\n\")"
---
Input:

module Test

test = when 5 match
    1 -> True
    _ -> False


Result:

Test.alma:4:6

Expected an `is` keyword after the expression and before the pattern matching branches, but instead found: `->`

  2│  
  3│  test = when 5 match
  4│      1 -> True
   │        ↑↑
  5│      _ -> False

Error {
    kind: InvalidPatternMatchingIsKeyword,
    token: Token {
        kind: Arrow,
        indent: 4,
        start: 39,
        end: 41,
        line: 4,
        column: 6,
    },
}
