src/snapshots/alma__parser__tests__test_module_parser__pattern_matching_errors-5.snap
---
source: src/parser.rs
assertion_line: 3793
expression: "parse(\"\\\nmodule Test\n\ntest = when 5 is\n    1 -> ,\n    _ -> False\n\")"
---
Input:

module Test

test = when 5 is
    1 -> ,
    _ -> False


Result:

Test.alma:4:9

Expected an expression after the arrow for the pattern matching branch, but instead found: `,`

  2│  
  3│  test = when 5 is
  4│      1 -> ,
   │           ↑
  5│      _ -> False

Error {
    kind: InvalidPatternMatchingBranchExpression,
    token: Token {
        kind: Comma,
        indent: 4,
        start: 39,
        end: 40,
        line: 4,
        column: 9,
    },
}
